ontol/ontol-compiler/test-cases/error/rel/wildcard_span.on
rel {integer} // ERROR subject must be a domain type
    'likes': integer
